--- a/iOSClient/SmileCoffeClient/SmileCoffeClient/Base.lproj/LaunchScreen.storyboard
+++ b/iOSClient/SmileCoffeClient/SmileCoffeClient/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +21,36 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Cheers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5K-bT-kMf">
+                                <rect key="frame" x="111" y="504" width="153" height="64"/>
+                                <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Book" family="Bodoni 72" pointSize="36"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" misplaced="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="CRj-nt-BLa">
+                                <rect key="frame" x="67" y="161" width="240" height="273"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="g5K-bT-kMf" secondAttribute="trailing" constant="95" id="41H-i8-RTK"/>
+                            <constraint firstItem="g5K-bT-kMf" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="95" id="Edo-oE-5Uh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CRj-nt-BLa" secondAttribute="trailing" constant="52" id="KXq-u4-19V"/>
+                            <constraint firstItem="CRj-nt-BLa" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="51" id="UqV-6w-drr"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="g5K-bT-kMf" secondAttribute="bottom" constant="99" id="WCJ-Yt-WIF"/>
+                            <constraint firstItem="g5K-bT-kMf" firstAttribute="top" secondItem="CRj-nt-BLa" secondAttribute="bottom" constant="70" id="cKt-BK-VHr"/>
+                            <constraint firstItem="CRj-nt-BLa" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="141" id="lky-hR-Lv0"/>
+                            <constraint firstItem="g5K-bT-kMf" firstAttribute="top" secondItem="CRj-nt-BLa" secondAttribute="bottom" constant="70" id="ucB-dS-m10"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="2550" height="3300"/>
+    </resources>
 </document>
